Minor Bug Fix: Can't see button on mobile devices

--- a/style.css
+++ b/style.css
@@ -374,6 +374,7 @@ body, html {
     padding: 20px;
     border-radius: 12px;
     margin-top: 20px;
+    margin-bottom: 40px;
     border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -436,6 +437,7 @@ body, html {
 .github-section {
     margin-top: auto;
     padding-top: 25px;
+    margin-bottom: 20px;
     border-top: 2px solid rgba(255, 255, 255, 0.1);
     background: transparent;
 }
